# renderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Classes/: AppDelegate.cpp  HelloWorldScene.cpp  HelloWorldScene.h  PointInPolygon.cpp  PointInPolygon.h  WinMouseTracker.cpp  WinMouseTracker.h
Scripts/: config.json  json.lua  main.lua  model.json
cocos2d/cocos/editor-support/spine/: CMakeLists.txt  Skeleton.cpp  Skeleton.h  SkeletonRenderer.h
cocos2d/cocos/editor-support/spine/v3/: SkeletonBatch.cpp  SkeletonBatch.h  SkeletonTwoColorBatch.cpp  SkeletonTwoColorBatch.h
cocos2d/cocos/editor-support/spine/v4/: SkeletonBatch.cpp  SkeletonBatch.h  SkeletonTwoColorBatch.h
cocos2d/cocos/platform/desktop/: CCGLViewImpl-desktop.cpp
ipc/: CMakeLists.txt  ipc.c  ipc.h  message.c  message.h  randomName.c  randomName.h  receiverTest.c  senderTest.c  windowsSharedMemory.c  windowsSharedMemory.h
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.ios_mac/mac/: Info.plist
proj.win32/: StartInfo.cpp  StartInfo.h  main.cpp
